--- a/index.html
+++ b/index.html
@@ -5,12 +5,93 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!--
+        1. Be able to record expenses and income
+        2. Be able to set the date for an entry
+        3. Be able to tag the entries to categorize them
+        4. Be able to see a monthly overview of expenses and income
+        5. Be able to see net worth
+        6. Be able to visualize the expenses and incomes through graphs
+        7. Be able to select date ranges, eg.: previous month, or year to date
+        8. Use localStorage to save all the data
+    -->
+
+    <div class="wrapper">
+
+        <div class="input-container" id="income-input-container"> 
+            <h4>Add income</h4>
+            <input type="text" placeholder="Name" id="income-name">
+            <input type="text" placeholder="Amount" id="income-amount"> 
+            <input type="date" value="2022-03-15" min="2010-01-01" max="2022-03-15" id="income-date">
+            <select id="income-category">
+                <option value="Not categorized">Not categorized</option>
+                <option value="Job">Job</option>
+                <option value="Business">Business</option>
+                <option value="Investments">Investments</option>
+            </select>
+            
+            <button class="submit-button">Submit</button>
+        </div>
+
+        <div class="input-container" id="expense-input-container">
+            <h4>Add expense</h4>
+            <input type="text" placeholder="Name" id="expense-name">
+            <input type="text" placeholder="Amount" id="expense-amount">
+            <input type="date" value="2022-03-15" min="2010-01-01" max="2022-03-15" id="expense-date">
+            <select id="expense-category">
+                <option value="Not categorized">Not categorized</option>
+                <option value="Clothing">Clothing</option>
+                <option value="Medical">Medical</option>
+                <option value="Hobbies">Hobbies</option>
+                <option value="Travel">Travel</option>
+                <option value="Bills">Bills</option>
+            </select>
+
+            <button class="submit-button">Submit</button>
+        </div>
+
+        <div class="table-container">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Amount</th>
+                        <th>Date</th>
+                        <th class="hide-mobile">Category</th>
+                    </tr>
+                </thead>
+
+                <tbody class="financial-table-body">
+                    <!-- <tr>
+                        <td>This is my name</td>
+                        <td>10000$</td>
+                        <td>03/15/2022</td>
+                        <td class="hide-mobile">Not categorized</td>
+                    </tr>
+                    <tr>
+                        <td>This is my name</td>
+                        <td>10000$</td>
+                        <td>03/15/2022</td>
+                        <td class="hide-mobile">Not categorized</td>
+                    </tr>
+                    <tr>
+                        <td>This is my name</td>
+                        <td>10000$</td>
+                        <td>03/15/2022</td>
+                        <td class="hide-mobile">Not categorized</td>
+                    </tr> -->
+                </tbody>
+            </table>
+        </div>
+
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
